--- a/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/MainMenu.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--<?import com.jfoenix.controls.JFXButton?>-->
-
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -17,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="mainAnchorpane" prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.MainMenuController">
+<AnchorPane fx:id="mainAnchorpane" prefHeight="788.0" prefWidth="1542.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.MainMenuController">
    <children>
       <Rectangle fill="WHITE" height="784.0" stroke="#f2e8c6" strokeType="INSIDE" strokeWidth="0.0" width="1548.0" />
       <Rectangle fill="#982b1c" height="78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1548.0" />
@@ -45,15 +43,7 @@
       <Circle fill="WHITE" layoutX="1460.0" layoutY="121.0" radius="24.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="RED" height="52.0" layoutX="41.0" layoutY="730.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
       <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="48.0" layoutX="43.0" layoutY="732.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="385.0" />
-      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#399918" height="52.0" layoutX="1103.0" layoutY="730.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
-      <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="48.0" layoutX="1105.0" layoutY="732.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="385.0" />
-      <Text fill="#399918" layoutX="1264.0" layoutY="766.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add">
-         <font>
-
-            <Font name="Gill Sans MT" size="30.0" />
-         </font>
-      </Text>
-      <Text fill="RED" layoutX="151.0" layoutY="766.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cancel Order">
+      <Text fill="RED" layoutX="151.0" layoutY="767.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cancel Order">
          <font>
             <Font name="Gill Sans MT" size="30.0" />
          </font>
@@ -106,7 +96,7 @@
       </Label>
       <ImageView fitHeight="108.0" fitWidth="1548.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../pic_resources/final%20menu/top%20banner.jpg" />
+            <Image url="@../../../pic_resources/final menu/top banner.jpg" />
          </image>
       </ImageView>
       <Text fill="WHITE" layoutX="198.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Where Every Bite Brings Smile">
@@ -114,12 +104,24 @@
             <Font name="Rage Italic" size="67.0" />
          </font>
       </Text>
-      <JFXButton fx:id="addToCart" layoutX="1102.0" layoutY="728.0" onAction="#setAddToCart" prefHeight="52.0" prefWidth="389.0" text="." />
-      <JFXButton layoutX="41.0" layoutY="729.0" onMousePressed="#cancelButton" prefHeight="52.0" prefWidth="390.0" text="." textFill="WHITE" />
-<!--      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">-->
-<!--         <font>-->
-<!--            <Font name="Gill Sans MT" size="15.0" />-->
-<!--         </font>-->
-<!--      </JFXButton>-->
+      <JFXButton layoutX="40.0" layoutY="745.0" onMousePressed="#cancelButton" prefHeight="52.0" prefWidth="390.0" text="." textFill="WHITE" />
+      <AnchorPane fx:id="addAnchorPane" layoutX="1101.0" layoutY="728.0" prefHeight="55.0" prefWidth="394.0" visible="false">
+         <children>
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#399918" height="52.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="389.0" />
+            <Rectangle arcHeight="15.0" arcWidth="15.0" fill="WHITE" height="48.0" layoutX="2.0" layoutY="1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="385.0" />
+            <Text fill="#399918" layoutX="167.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add">
+               <font>
+      
+                        <Font name="Gill Sans MT" size="30.0" />
+               </font>
+            </Text>
+            <JFXButton fx:id="addToCart" onAction="#setAddToCart" prefHeight="52.0" prefWidth="389.0" text="." />
+         </children>
+      </AnchorPane>
+      <!--      <JFXButton buttonType="RAISED" layoutX="1375.0" layoutY="693.0" text="View Order List" underline="true">-->
+      <!--         <font>-->
+      <!--            <Font name="Gill Sans MT" size="15.0" />-->
+      <!--         </font>-->
+      <!--      </JFXButton>-->
    </children>
 </AnchorPane>
