--- a/src/main/resources/org/example/softfun_funsoft/Receipt.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/Receipt.fxml
@@ -45,7 +45,7 @@
       </Text>
       <Rectangle arcHeight="20.0" arcWidth="20.0" height="89.0" layoutX="548.0" layoutY="546.0" opacity="0.5" stroke="#f5c92c" strokeType="INSIDE" strokeWidth="0.0" width="331.0" />
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#f7cc2a" height="89.0" layoutX="544.0" layoutY="542.0" stroke="#f5c92c" strokeType="INSIDE" strokeWidth="5.0" width="331.0" />
-      <JFXButton layoutX="542.0" layoutY="529.0" prefHeight="97.0" prefWidth="334.0" text="I'll just take a picture" textFill="WHITE">
+      <JFXButton layoutX="542.0" layoutY="529.0" onAction="#startTimer" prefHeight="97.0" prefWidth="334.0" text="I'll just take a picture" textFill="WHITE">
          <font>
             <Font name="Gill Sans MT Bold" size="25.0" />
          </font>
