--- a/src/main/resources/org/example/softfun_funsoft/StartUp.fxml
+++ b/src/main/resources/org/example/softfun_funsoft/StartUp.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.StartUpCont">
+<AnchorPane prefHeight="800.0" prefWidth="1541.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.softfun_funsoft.StartUpCont">
    <children>
       <Rectangle fill="#db1f2a" height="800.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1541.0" />
-      <MediaView fx:id="mediaView" fitHeight="800.0" fitWidth="1200.0" layoutX="184.0" />
+      <MediaView fx:id="mediaView" fitHeight="800.0" fitWidth="1541.0" preserveRatio="false" />
       <ImageView fitHeight="416.0" fitWidth="383.0" layoutX="577.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../pic_resources/McLUX_logo.png" />
